rnsc/test_data/rns_integration/error/assembler/package_with_class_utf8.rns
; Tests that .package with .class @utf8 produces E-045 error.
; Expected error: E-045

.class public @utf8 MyClass
.package com/example
.super java/lang/Object
.class_end
